# snack

./: .envrc  .gitignore  CHANGELOG.md  TODO  TODO.md  default.nix  flake.nix  shell.nix
macros/: cabal_macros.h
nix/: sources.json
script/: install
snack-lib/: Imports.hs  Insight  attrset-lib.nix  build.nix  cabal_macros.h  debug.nix  default.nix  files.nix  fileset.nix  ghci.nix  lib.nix  macros.nix  module-spec.nix  modules.nix  orderedMake.nix  package-spec.nix  pkgSpecAndBaseMemo.nix  wrapper.nix
snack-lib/import-parser/: CHANGELOG.md  LICENSE  import-parser.cabal
snack-lib/import-parser/app/: Imports.hs
snack-lib/import-parser/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
tests/: tests.nix
tests/any-paths/: libb64  test
tests/cpp/: Main.hs
tests/cpp-2/: Main.hs
tests/cpp-3/: Lib.hi  Lib.hs  Main  Main.hi  Main.hs  cabal_macros2.h  package.nix
tests/extended-config/: snack.nix
tests/fully-static-executable/: Lib.hs  Main.hs  package.nix  snack.nix  test
tests/packages-2/: .package.yaml.swp
tests/single-main/: package.nix  test
