cabal-version:      3.0
name:               import-parser
version:            0.1.0.0
synopsis:           to use hls, need cabal
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             _
maintainer:         _
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable import-parser
    import:           warnings
    main-is:          Imports.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                 ,    ghc
                 ,    process
    hs-source-dirs:   app
    default-language: Haskell2010
